# vinsfusion-clean

./: CMakeLists.txt  README.md  package.xml
config/m3ed/: cam0_forest_hard.yaml  cam0_forest_road.yaml  cam0_indoor_stairs.yaml  cam0_outdoor_day_penno_short_loop.yaml  cam0_outdoor_day_skatepark_1.yaml  cam0_outdoor_night_penno_short_loop.yaml  cam0_pinhole.yaml  cam0_rgb_pinhole.yaml  cam1_pinhole.yaml  spot_forest_hard.yaml  spot_forest_road_1.yaml  spot_indoor_building_loop.yaml  spot_indoor_stairs.yaml  spot_indoor_stairwell.yaml  spot_outdoor_day_penno_short_loop.yaml  spot_outdoor_day_skatepark_1.yaml  spot_outdoor_night_penno_short_loop.yaml
config/zed2i/: left.yaml  right.yaml  zed_mono_imu_config.yaml  zed_stereo_config.yaml  zed_stereo_imu_config.yaml
docker/: Dockerfile  Dockerfile_cuda  depth_requirements.txt  run.sh
include/loop_fusion/: parameters.h
include/vins_estimator/estimator/: DepthInfer.h  estimator.h  feature_manager.h  parameters.h
include/vins_estimator/featureTracker/: feature_tracker.h
include/vins_estimator/initial/: initial_alignment.h
include/vins_estimator/utility/: visualization.h
launch/: vins.launch  vins_depth.launch  vins_depth_node.launch
scripts/: depth.py  depth_node.py
src/node/: node_ros.cpp
src/vins_estimator/estimator/: DepthInfer.cpp  estimator.cpp  parameters.cpp
src/vins_estimator/featureTracker/: feature_tracker.cpp
src/vins_estimator/utility/: visualization.cpp
srv/: EstimateDepth.srv
zed/: README.md  bridge.sh  master.sh  zed.sh
zed/docker/: Dockerfile.bridge
